[tool.poetry]
name = "sweater-logging"
version = "0.1.0"
description = "Logging configuration for python sweater projects"
authors = ["Jason Corbett <jcorbett@sweaterventures.com>"]
readme = "README.md"
license = "Proprietary"
exclude = [
  "logging-demo.py"
]

[tool.poetry.dependencies]
python = "^3.12"
python-json-logger = "^2.0.7"


[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
